# Mobile_rephoto

./: .gitignore  AndroidManifest.xml  README.md  wym.txt
cpp/: CMakeLists.txt  DetectExtrema.cpp  GPUBase.cpp  GaussFilter.cpp  PyramidProcess.cpp  SiftGPU.cpp  Subtract.cpp  imgfeatures.cpp  native-lib.cpp  opencl_test.cpp  sift_cpu.cpp  utils.cpp
cpp/include/: Descriptor.h  DetectExtrema.h  GPUBase.h  PyramidProcess.h  Shared.h  SiftGPU.h  Subtract.h  imgfeatures.h  opencl_test.h  sift_cpu.h  utils.h
cpp/include/GPU_CL/: BlurGaussFilter.cl  DetectExtrema.cl  GPUCode.cl  Subtract.cl
cpp/include/sift_cl/: DetectExtrema.h  GPUBase.h  GaussFilter.h  PyramidProcess.h  Shared.h  SiftGPU.h  Subtract.h  imgfeatures.h  utils.h
cpp/src/: native-lib.cpp  opencl_test.cpp
cpp/src/sift_cl/: DetectExtrema.cpp  GPUBase.cpp  GaussFilter.cpp  PyramidProcess.cpp  SiftGPU.cpp  Subtract.cpp  imgfeatures.cpp  utils.cpp
cpp/src/sift_cpu/: sift_cpu.cpp
java/com/example/rephoto/: CameraView.java  CloseButtonView.java  DrawView.java  GetPathFromUri4kitkat.java  MainActivity.java  MyUtility.java  OpenButtonView.java  SaveButtonView.java
res/drawable/: snap_button.xml  snap_button_stop.xml  text_view_border.xml
res/layout/: activity_main.xml
res/values/: strings.xml
